[package]
name = "node-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
discv4 = { git = "https://github.com/rust-ethereum/discv4" }
secp256k1 = { version = "0.20" }
rand = "0.8"
postgres = "0.19.7"
tokio-postgres = "0.7.10"
hex = '0.4'
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.0"
