[package]
name = "void"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "discv"

[[bin]]
name = "ping"

[[bin]]
name = "server"

[[bin]]
name = "status"


[dependencies]
tokio = { version = "1.41", features = ["full"] }
discv4 = { git = "https://github.com/rllola/discv4" }
secp256k1 = { version = "0.29", features = ["recovery", "global-context", "rand-std"] }
rand = "0.8"
tokio-postgres = "0.7.12"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
rlp = "0.6.1"
serde_json = "1.0"
snap = "1.1.0"
log = "0.4.17"
env_logger = "0.11"
aes = "0.8.4"
ecb = "0.1.1"
sha3 = "0.10.8"
byteorder = "1.4.3"
rand_core = "0.6.4"
hmac-sha256 = "1.1.6"
ctr = "0.9.2"
k256 = { version = "0.13", features = ["ecdh", "ecdsa-core", "arithmetic"] }
postgres = { version = "0.19.10", features = ["with-serde_json-1"] }
futures = "0.3.31"

[dev-dependencies]
devp2p = { git = "https://github.com/rllola/devp2p" }
secp256k1_20 = { package = "secp256k1", version = "0.20", features = ["recovery", "global-context"] }

ethereum-types = "0.15.1"
tx-from-scratch = { git = "https://github.com/Kuly14/tx-from-scratch" }
primitive-types = "0.9.1"
